--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 comm==0.1.3
+contourpy==1.0.7
 cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 et-xmlfile==1.1.0
 executing==1.2.0
 Flask==2.2.3
-fonttools==4.39.4
+fonttools==4.39.3
 idna==3.4
 imbalanced-learn==0.10.1
 imblearn==0.0
@@ -27,10 +28,10 @@ MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
-numpy==1.25.0
+numpy==1.24.2
 openpyxl==3.1.2
 packaging==23.1
-pandas==1.3.5
+pandas==2.0.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
