--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ Pillow==9.5.0
 platformdirs==3.2.0
 prompt-toolkit==3.0.38
 psutil==5.9.4
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.0
